<resources>
    <string name="app_name">SpendWatch</string>

    //TO DO:
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="stats">Statistics</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="profile">Profile</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="desc">Description</string>
    <string name="balance">Balance</string>
    <string name="input_balance">Input Balance here</string>
    <string name="date">Date</string>
    <string name="profiles">PROFILES</string>
    <string name="input_error">Semua input harus diisi.</string>
    <string name="profile_add">Add Profile</string>
    <array name="profile_choice">
        <item name="rename">Rename</item>
        <item name="delete">Delete</item>
    </array>
</resources>